--- a/03-THREE-DEMO/three-demo/package.json
+++ b/03-THREE-DEMO/three-demo/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.2.0",
+    "dat.gui": "^0.7.9",
     "gsap": "^3.11.3",
     "three": "^0.147.0",
     "vite": "^3.2.3"
