--- a/使用物理引擎/package.json
+++ b/使用物理引擎/package.json
@@ -13,6 +13,7 @@
     "parcel": "^2.8.0"
   },
   "dependencies": {
+    "cannon-es": "^0.20.0",
     "dat.gui": "^0.7.9",
     "gsap": "^3.11.3",
     "three": "^0.146.0"
